--- a/Animal Filter using only Redux/src/index.css
+++ b/Animal Filter using only Redux/src/index.css
@@ -1,69 +1,215 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
+@import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sora&display=swap');
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  background-image: 
+    linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);
+  font-family: 'Sora', sans-serif;
+  text-shadow: .1em .1em 0 hsl(200 50% 30%);
+  text-align: center;
+  color: #fff;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.content {
+  width: 100%;
+  height: 100%;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+.about {
+  margin: 50px auto;
+  text-align: center;
+}
+
+.about__heading {
+  font-family: 'Luckiest Guy', cursive;
+  font-size: 46px;
+  text-shadow: -1px -1px 0px #004d7a, 
+    3px 3px 0px #004d7a,
+    6px 6px 0px #051937;
+}
+
+.about__text {
+  padding: 16px;
+}
+
+.button {
+  background-color: #00bf72;
+  border: 2px solid #a8eb12;
+  color: #fff;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  border-radius: 3px;
+  padding: 10px 20px;
+  transition: 
+    background-color .3s,
+    border-color .3s;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.button:hover {
+  background-color: #008793;
+  border-color: #004d7a;
+}
+
+.animals {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 34px;
+  margin: 0 auto;
+  width: 640px;
+}
+
+.animals__item {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 12px;
+  text-align: center;
+  position: relative;
+}
+
+.animals__desc {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 0;
+}
+
+.animals__img {
+  border-bottom-left-radius: 50%;
+  border-bottom-right-radius: 50%;
+  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+  object-fit: cover;
+  height: 190px;
+}
+.animals__delete {
+  display: none;
+}
+
+.animals__item:hover .animals__delete {
+  background-color: #008793;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  border: none;
+  cursor: pointer;
+  color: #fff;
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: -15px;
+  right: -15px;
+  transition: background-color .3s;
+}
+
+.animals__item:hover .animals__delete:hover {
+  background-color: #051937;
+}
+
+.modal {
+  background-color: #004d7abd;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+.form {
+  background-color: #004d7a;
+  border: 4px solid #ffffff71;
+  border-radius: 4px;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 10px;
+  padding: 15px 30px;
+  text-align: start;
+  width: 400px;
+}
+
+.form__heading {
+  font-size: 22px;
+  text-align: center;
+}
+
+.form__separator {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  padding-bottom: 8px;
+}
+
+.form__separator::before,
+.form__separator::after {
+  content: '';
+  flex: 1;
+  border-bottom: 1px solid #fff;
+}
+
+.form__separator:not(:empty)::before {
+  margin-right: .20em;
+}
+
+.form__separator:not(:empty)::after {
+  margin-left: .20em;
+}
+
+.form__footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 16px;
+  padding: 4px 0;
+}
+
+.form__btn {
+  background-color: #008793;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+  border-radius: 3px;
+  padding: 10px 20px;
+  transition: 
+    background-color .3s,
+    border-color .3s;
+}
+
+.form__btn:hover {
+  background-color: #00bf72;
+}
+
+.form__btn--close {
+  background-color: #aeaeae;
+}
+
+.form__btn--close:hover {
+  background-color: #888888;
+}
+
+.label {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+.label__input {
+  background-color: #fff;
+  border: 1px solid #051937;
+  border-radius: 3px;
+  outline: 3px solid transparent;
+  padding: 10px 16px;
+  transition: 
+    outline-color .3s;
+}
+
+.label__select {
+  background-color: #fff;
+  border-radius: 3px;
+  outline: 3px solid transparent;
+  padding: 10px 16px;
+  transition: 
+    outline-color .3s;
+}
+
+.label__input:focus,
+.label__select:focus {
+  outline-color: #00bf72;
 }
